fix(navigation card): shift font size for new token
affects: @entur/layout

--- a/packages/layout/src/NavigationCard.scss
+++ b/packages/layout/src/NavigationCard.scss
@@ -8,7 +8,7 @@
   position: relative;
   transition: transform $timings-medium ease-in-out;
   &__title {
-    font-size: $font-sizes-extra-large;
+    font-size: $font-sizes-extra-large2;
     line-height: $line-heights-extra-large3;
     font-weight: $font-weights-heading;
     margin: $space-extra-small 0 $space-medium;
